$Id$

version ? (????-??-??):

  - common pdf functions and initialization moved to lib/pdf.php (alec)
  - lms-reminder: BTS#0000670 - fixed query (alec)
  - Excluded groups - possibility to disable user access to specified
    customers groups (alec)
    *****************************************************************
  - PostgreSQL 8.1 is required now (alec)
    *****************************************************************
  - cash import: when customer is known don't show selection field,
    added $modvalue configuration variable, code cleanup, transactions
    support (alec)
  - when customer wasn't found in quick customer search do redirect to 
    customer search module with filled zip and city fields  (alec)
  - fixed few problems with apostrophe sign in tariffs names (alec)

version 1.9.8 Idos (2007-07-12):

  - changed DB driver version format (alec)
  - lmsd: added %i16 variable for IP's last octet heximal representation
    in tc/tc-ng and %i16 and %i16pub in hostfile module (alec) 
  - mysql driver: server version checking only when connected (alec)
  - fixed problem when invoicing without tax rates defined (alec)
  - renamed tariffdelete.php to tariffdel.php according to modules naming
    convention (alec)
  - helpdesk: added 'include contact info' checkbox for requests list 
    printing (alec)
  - lms-traffic-logiptables: iptables 1.3.7 support (alec)
  - mac fields should accept now every mac format, including windows, cisco,
    etc (lukasz)
  - %CMAC macro in lms-mgc returns cisco format address: nnnn.nnnn.nnnn (lukasz)
  - network map: rised limit of nodes connected to one device (alec)
  - network map: increased limit of devices connected to one device (alec)
  - network map: devices connection lines are not overlaps (alec)
  - network map: fixed thick line look, better map generation speed (alec)
  - network map: view without nodes (alec)
  - network devices: fixed devices list sorting by used ports count (alec)