@@ -157,7 +157,7 @@ CLASS="FILENAME"
 >lms.ini</TT
 > is beeing treaded as obsolete. 
 	 The only required values there are from [database] and [directories]
-	 sections. Settings are stored in database and could be changed by 
+	 sections. Other settings are stored in database and could be changed by 
 	 user interface.</P
 ></TD
 ></TR
