@@ -204,9 +204,8 @@ NAME="INSTALL-PGSQL-INTRO"
 >2.5.2.1. Intro</A
 ></H3
 ><P
->LMS is tested on PostgreSQL 8.1 and higher, there can be problems with its later
-               versions. If you have not installed PostgreSQL server, you can compile
-               it yourself from sources available on <A
+>LMS require PostgreSQL 8.1 or higher. If you have not installed PostgreSQL server, 
+	       you can compile it yourself from sources available on <A
 HREF="http://www.postgresql.org"
 TARGET="_top"
 >               www.postgresql.org</A
@@ -238,6 +237,32 @@ $ /usr/local/pgsql/bin/initdb -D /usr/local/pgsql/data --locale=pl_PL.UTF-8
 $ /usr/local/pgsql/bin/postmaster -D /usr/local/pgsql/data &#62;logfile 2&#62;&#38;1 &#38;</PRE
 >
                </P
+><P
+><DIV
+CLASS="WARNING"
+><TABLE
+CLASS="WARNING"
+WIDTH="100%"
+BORDER="0"
+><TR
+><TD
+WIDTH="25"
+ALIGN="CENTER"
+VALIGN="TOP"
+><IMG
+SRC="../images/warning.gif"
+HSPACE="5"
+ALT="Warning"></TD
+><TD
+ALIGN="LEFT"
+VALIGN="TOP"
+><P
+>It's required to add in postgresql.conf: custom_variable_classes = 'lms'</P
+></TD
+></TR
+></TABLE
+></DIV
+></P
 ></DIV
 ><DIV
 CLASS="SECT3"
