@@ -263,6 +263,7 @@ $ su - postgres
 $ /usr/local/pgsql/bin/initdb -D /usr/local/pgsql/data --locale=pl_PL.UTF-8
 $ /usr/local/pgsql/bin/postmaster -D /usr/local/pgsql/data >logfile 2>&1 &</screen>
                </para>
+	       <para><warning><para>Wymagane jest dodanie wpisu w postgresql.conf: customer_variable_classes = 'lms'</para></warning></para>
           </sect3>
           <sect3 id="install-pgsql-dbcreate">
           <title>Utworzenie bazy danych</title>
