@@ -8,6 +8,7 @@ version ? (????-??-??):
     customers groups (alec)
     *****************************************************************
   - PostgreSQL 8.1 is required now (alec)
+	!!!! postgresql.conf: custom_variable_classes = 'lms'
     *****************************************************************
   - cash import: when customer is known don't show selection field,
     added $modvalue configuration variable, code cleanup, transactions
